[package]
name = "pastebin_server"
version = "0.1.0"
authors = ["name1e5s <name1e5s@bupt.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.4.0"
r2d2 = "0.8"
tokio-threadpool = "*"
futures_1 = { version = "0.1.25", package = "futures" }
log = "0.4.8"
dotenv = "0.9.0"
futures-executor = { version = "0.3.1", features = ["thread-pool"] }
http = "*"

[dependencies.async-std]
version = "1.2.0"
features = ["attributes"]

[dependencies.serde]
version = "1.0.103"
features = ["derive"]

[dependencies.futures]
features = ["compat"]
version = "0.3.1"

[dependencies.diesel]
features = ["unstable", "postgres", "uuidv07", "r2d2", "chrono", "network-address"]
version = "1.4.3"

[dependencies.uuid]
version = "0.7"
features = ["v4", "serde"]